<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">
    <!--tabBar-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                style="@style/home_top_bar_item_active"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buddy" />
            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/medicine" />
            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/computer" />

            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/english" />

            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/law" />

            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/travel" />

            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity" />

            <TextView
                style="@style/home_top_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dress" />

        </LinearLayout>

    </HorizontalScrollView>


    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:scrollbars="none">

        <!--    tabBar内容-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_tab_bar_item_content_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

<!--    <Button-->
<!--        android:id="@+id/my_scan_code"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:text="@string/scanQrcode" />-->

</LinearLayout>